# antara-makerbot

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  ideas.org  lgtm.yml
LEGAL/: DEVELOPER-AGREEMENT  LICENSE
assets/: MM2.json  mmbot_config.json
cmake/: mmbot.cmake  version.hpp.in
cmake/targets/: CMakeLists.txt
docs/: api.md
scripts/: add-strat.http  get-strat.http  travis_build.sh  travis_install.sh
src/: CMakeLists.txt  main.cpp  mmbot.tests.cpp
src/app/: mmbot.application.cpp  mmbot.application.hpp
src/cex/: cex.cpp  cex.hpp  cex.mock.hpp  cex.tests.cpp  fake.cex.cpp  fake.cex.hpp  fake.cex.tests.cpp
src/cex/binance/: binance.cpp  binance.hpp  binance.tests.cpp
src/config/: config.cpp  config.hpp  config.tests.cpp
src/dex/: dex.cpp  dex.hpp  dex.mock.hpp  dex.utils.cpp  dex.utils.hpp  dex.utils.tests.cpp
src/dex_adapter/: dex.adapter.cpp  dex.adapter.hpp
src/http/: http.endpoints.hpp  http.mm2.rest.cpp  http.mm2.rest.hpp  http.price.rest.cpp  http.price.rest.hpp  http.server.cpp  http.server.hpp  http.server.tests.cpp  http.sm.rest.cpp  http.sm.rest.hpp
src/mm2/: mm2.client.cpp  mm2.client.hpp  mm2.client.tests.cpp
src/order_manager/: order.manager.cpp  order.manager.hpp  order.manager.mock.hpp  order.manager.tests.cpp
src/orders/: orders.cpp  orders.hpp  orders.tests.cpp
src/price/: abstract.price.platform.hpp  coinpaprika.price.platform.cpp  coinpaprika.price.platform.hpp  coinpaprika.price.platform.tests.cpp  exceptions.price.platform.hpp  factory.price.plaftorm.tests.cpp  factory.price.platform.hpp  service.price.platform.cpp  service.price.platform.hpp  service.price.platform.mock.hpp  service.price.platform.tests.cpp
src/strategy_manager/: strategy.manager.cpp  strategy.manager.hpp  strategy.manager.impl.hpp  strategy.manager.mock.hpp  strategy.manager.tests.cpp  strategy_manager.cpp  strategy_manager.hpp
src/utils/: antara.algorithm.hpp  antara.utils.cpp  antara.utils.hpp  antara.utils.tests.cpp  exceptions.hpp  mmbot_strong_types.cpp  mmbot_strong_types.hpp  mmbot_strong_types.tests.cpp  pretty_function.hpp
